# elevenlabs_sfx

./: Cargo.toml  readme.md
examples/: advanced_sfx.rs  basic_sfx.rs
src/: error.rs  lib.rs  types.rs
tests/: integration_test.rs
