[package]
name = "elevenlabs_sfx"
version = "0.0.6"
edition = "2024"
description = "Type-safe Rust client for ElevenLabs Sound Effects API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hamzaelmarjani/elevenlabs_sfx"
keywords = [
    "elevenlabs",
    "elevenlabs_sfx",
    "elevenlabs_api",
    "elevenlabs_rs",
    "sounds_effects",
]
categories = ["api-bindings", "multimedia::audio", "network-programming"]

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
chrono = "0.4.41"

[dev-dependencies]
tokio-test = "0.4.4"

[[example]]
name = "basic_sfx"
required-features = []

[[example]]
name = "advanced_sfx"
required-features = []
